# evlib

./: .gitignore  .pre-commit-config.yaml  BUILD.md  Cargo.toml  README.md  build.sh  pyproject.toml  pytest.ini
.github/scripts/: setup-zig-linker.sh
.github/workflows/: CI.yml  build.yml  pytest.yml  release.yml  rust.yml  tag.yml
examples/: README.md  basic_usage.py  benchmark.py  event_augmentation.py  event_transformations.py  evlib_showcase.py  evlib_visualizations.ipynb  list_modules.py  rust_example.rs  synthetic_dvs_data.py  test_voxel.py
python/evlib/: __init__.py
src/: lib.rs  transforms.rs
src/augmentation/: mod.rs
src/contrast_maximization/: mod.rs
src/data_formats/: mod.rs
src/ev_augmentation/: mod.rs
src/ev_core/: mod.rs  python.rs
src/ev_formats/: mod.rs
src/ev_processing/: mod.rs
src/ev_processing/reconstruction/: e2vid.rs  mod.rs  python.rs
src/ev_representations/: mod.rs  voxel_grid.rs
src/ev_transforms/: mod.rs
src/ev_visualization/: mod.rs
src/events_core/: mod.rs  python.rs
src/representations/: mod.rs
src/visualization/: mod.rs
tests/: test_data_formats.py  test_ev_core.py  test_events_core.py  test_evlib.py  test_imports.py  test_reconstruction.py  test_representations.py  test_utilities.py  test_visualization.py  test_voxel.py
