[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[project]
name = "evlib"
description = "Python bindings for event camera utilities"
readme = "README.md"
authors = [
  { name = "Tarek Allam", email = "t.allam.jr@gmail.com" },
]
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-benchmark"
]
plot = ["matplotlib >= 3.10.3", "opencv-python>=4.11.0.86"]
numpy = ["numpy >= 2.2.5"]
jupyter = ["jupyter >= 1.1.1"]

# All
all = [
  "evlib[plot,numpy,jupyter]",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "evlib"
# Strip the library for minimum file size
strip = true
# Optionally include extra files in sdist or wheel
include = [{ path = "rust-toolchain.toml", format = "sdist" }, { path = "dist", format = ["sdist", "wheel"]} ]

[tool.pytest.ini_options]
testpaths = ["tests"]
